Polish "Provide a preprocessor for modifying request and response headers"
See gh-584